src/parser/snapshots/enderpy__parser__parser__tests__subscript.snap
---
source: src/parser/parser.rs
description: "a[b]"
---
Module {
    node: Node {
        start: 0,
        end: 4,
    },
    body: [
        ExpressionStatement(
            Subscript(
                Subscript {
                    node: Node {
                        start: 0,
                        end: 2,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    slice: Name(
                        Name {
                            node: Node {
                                start: 2,
                                end: 3,
                            },
                            id: "b",
                        },
                    ),
                },
            ),
        ),
    ],
}
