src/parser/snapshots/enderpy__parser__parser__tests__yield_expression-2.snap
---
source: src/parser/parser.rs
description: yield a
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        ExpressionStatement(
            Yield(
                Yield {
                    node: Node {
                        start: 0,
                        end: 7,
                    },
                    value: Some(
                        Name(
                            Name {
                                node: Node {
                                    start: 6,
                                    end: 7,
                                },
                                id: "a",
                            },
                        ),
                    ),
                },
            ),
        ),
    ],
}
