src/parser/snapshots/enderpy__parser__parser__tests__yield_expression-3.snap
---
source: src/parser/parser.rs
description: yield from a
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        ExpressionStatement(
            YieldFrom(
                YieldFrom {
                    node: Node {
                        start: 0,
                        end: 12,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 11,
                                end: 12,
                            },
                            id: "a",
                        },
                    ),
                },
            ),
        ),
    ],
}
